# libfptu

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md  appveyor.yml  cmake
.circleci/: config.yml
.github/workflows/: ci.yml  coverity.yml
cmake.fptu/: compiler.cmake  testing.cmake
docs/: Makefile  online-badges.md  readme-body.md  toc.sh
fast_positive/: config.h.in  tuples.h  tuples_internal.h  tuples_legacy.h
fast_positive/details/: api.h  audit.h  bug.h  cpu_features.h  crutches.h  datetime.h  decimal.h  essentials.h  exceptions.h  field.h  fixed_binary.h  float.h  getter.h  integer128.h  ip_address.h  legacy_common.h  legacy_compat.h  mac_address.h  meta.h  nan.h  posix_modern.h  property.h  ro.h  rw.h  scan.h  schema.h  string_view.h  tagged_pointer.h  token.h  type2genus.h  types.h  uio.h  utils.h  uuid.h  warnings_pop.h  warnings_push_pt.h  warnings_push_system.h  windows_mustdie.h
fast_positive/details/1Hippeus/: actor.h  buffer.h  hipagut.h  hipagut_allocator.h  utils.h
fast_positive/details/TODO/: casting.h  endianness.h  unaligned.h
fast_positive/details/erthink/: erthink_short_alloc.h
fast_positive/erthink/: erthink_short_alloc.h
fast_positive/erthink/cmake/: compiler.cmake
fast_positive/erthink/test/: testing.h++
fast_positive/tuples/: api.h  config.h.in  essentials.h  internal.h  legacy.h  schema.h  string_view.h  token.h  types.h
fast_positive/tuples/1Hippeus/: actor.h  buffer.h  hipagut.h  hipagut_allocator.h  utils.h
fast_positive/tuples/TODO/: casting.h  unaligned.h
fast_positive/tuples/details/: audit.h  bug.h  cpu_features.h  crutches.h  exceptions.h  field.h  getter.h  legacy_common.h  legacy_compat.h  memcheck_valgrind.h  meta.h  nan.h  posix_modern.h  ro.h  rw.h  scan.h  tagged_pointer.h  type2genus.h  uio.h  utils.h  warnings_pop.h  warnings_push_pt.h  warnings_push_system.h  windows_mustdie.h
fast_positive/tuples/types/: datetime.h  decimal.h  fixed_binary.h  float.h  integer128.h  ip_address.h  mac_address.h  property.h  uuid.h
src/: CMakeLists.txt  audit.cxx  autogrowth.cxx  compat_common.cxx  compat_field.cxx  compat_ro.cxx  compat_rw.cxx  cpu_features_ia32.cxx  debug.cxx  except.cxx  gear.cxx  gperf_ECMAScript_keywords.h  json_emit.cxx  managed.cxx  misc.cxx  ro.cxx  rw.cxx  scan_AVX.cxx  scan_AVX2.cxx  scan_AVX512.cxx  scan_SSE2.cxx  scan_ifunc.cxx  scan_portable.cxx  schema.cxx  tablets.cxx  time.cxx  version.cxx.in
src/1Hippeus/: allot_stdcxx.cxx  buffer.cxx  ensure.cxx  hipagut.cxx  utils.cxx
src/TODO/: json_emit.cxx  json_parse.cxx  magic.cxx
src/obsolete/: bitset4tags.h  check.cxx  common.cxx  compare.cxx  create.cxx  data.cxx  get.cxx  internal.h  iterator.cxx  remove.cxx  shrink.cxx  sort.cxx  upsert.cxx
test/: 0trivia.cxx  1create.cxx  2upsert.cxx  3iterate.cxx  4fetch.cxx  5remove.cxx  6shrink.cxx  CMakeLists.txt  fptu_test.h  shuffle6.hpp
test/TODO/: 7compare.cxx  8emit2json.cxx  c_mode.c
test/TODO/1Hippues/: buffer.cpp  ensure.cpp  hipagut.cpp
test/modern/: exceptions.cxx  internals.cxx  smoke.cxx
